--- a/Tecnicas de Programacao II/prj_cadastro/frm_clientes.resx
+++ b/Tecnicas de Programacao II/prj_cadastro/frm_clientes.resx
@@ -706,4 +706,7 @@
         uzeaTlR75ZFXGXwPnvMk9Srwv4njiVx0ySOvMh5XnnLuDkGs11k34kSlAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>124, 17</value>
+  </metadata>
 </root>
